# aix

./: .env.example  .gitignore  README.md  create-dbs.sql  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml
backend/src/: pyproject.toml
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2024-02-19-20-43_0eaf006791d3.py  2024-02-21-03-05_abd304978f4e.py  2024-02-21-14-33_4b5173ebb3e1.py  2024-02-21-16-29_600d97c32af9.py  2024-02-22-08-54_f1e1eede41a3.py  2024-02-22-19-32_ec84731f0369.py  2024-02-22-19-40_af24c6a654e3.py  2024-02-23-00-25_4c2d3edf4aaa.py  2024-02-23-00-53_f1b6a37e31be.py  2024-02-23-06-41_8990cc3e22ed.py  2024-02-23-07-49_c86df16f6e13.py  2024-02-24-09-12_40d1754ab283.py
backend/src/app/: main.py
backend/src/app/aisdk/: grade_question.py
backend/src/app/api/: deps.py
backend/src/app/api/v1/: api.py
backend/src/app/api/v1/endpoints/: hero.py  (+4 more)
backend/src/app/core/: config.py
backend/src/app/core/auth/: __init__.py
backend/src/app/core/document_processing/: processor.py  splitter.py
backend/src/app/core/quiz_creation/: quiz_utils.py  rag_quiz_content.py
backend/src/app/core/text_embedding/: embedder.py
backend/src/app/crud/: __init__.py  hero_crud.py  question_engine_crud.py  quiz_attempt_crud.py  quiz_engine_crud.py  user_file_crud.py
backend/src/app/db/: health.py  session.py
backend/src/app/models/: __init__.py  link_model.py  question_bank_model.py  quiz_attempt_model.py  quiz_engine_model.py  quiz_feedback_model.py  quiz_grade_model.py  quiz_model.py  user_file_modal.py
backend/src/app/openai_sdk/: generate_questions.py  q_grade_feedback.py  seed_config.py
backend/src/app/schemas/: common_schema.py  hero_schema.py  question_engine_schema.py  quiz_attempt_schema.py  quiz_engine_schema.py  user_file_schema.py
backend/src/app/utils/: model_enums.py  uuid6.py
backend/src/app/utils/exceptions/: __init__.py  common_exception.py
backend/src/app/utils/mock/: generated_questions.py
backend/src/test/: test_main.py
(+125 files in other folders)
