[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mjs <mr.junaid.ca@gmail.com>"]

[tool.black]
line-length = 88
target-version = [ "py311" ]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",    
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic", "__pycache__"]


[tool.poetry.dependencies]
python = ">=3.11, <3.12"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
fastapi = {extras = ["all"], version = "^0.110.0"}
cryptography = "^41.0.7"
bcrypt = "^4.1.1"
SQLAlchemy-Utils = "^0.41.1"
SQLAlchemy = "^2.0.27"
watchfiles = "^0.21.0"
asyncer = "^0.0.5"
httpx = "^0.25.2"
openpyxl = "^3.1.2"

fastapi-async-sqlalchemy = "^0.6.1"

psycopg2-binary = "^2.9.9"

requests = "^2.31.0"
wheel = "^0.42.0"
setuptools = "^69.0.2"
langchain = "0.1.9"
openai = "1.12.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
sqlmodel = "^0.0.16"
python-jose = "^3.3.0"
asyncio = "^3.4.3"
greenlet = "^3.0.3"
pinecone-client = "^3.1.0"
docx = "^0.2.4"
pdfplumber = "^0.10.4"
langchain-openai = "^0.0.7"
python-docx = "^1.1.0"
langchain-pinecone = "^0.0.3"
trulens-eval = "0.24.0"
uvicorn = "^0.27.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.256"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"